tests/errors/extra-record-field.wit
#cite: ::author:: !!

@cite {author - Smith, year - 2024}
